--- a/assets/pug/layout/email-left-sidebar.pug
+++ b/assets/pug/layout/email-left-sidebar.pug
@@ -4,7 +4,7 @@ div(class="card gap-0 lg:z-10 2xl:p-card-spacing lg:p-3 left-sidebar-aside z-[3]
   div.flex.justify-between    
     div.flex.items-center.gap-3.mb-4(class="sm:gap-1")
       div.avatar 
-        div.w-10.rounded-full
+        div.w-10.rounded-full.h-10
           img(src='../../assets/images/avatar/2.jpg' alt='avatar')
       div
         h4.text-xs.font-semibold.text-title(class="leading-none 3sm:text-2xs 3sm:leading-none") Dmitriy Groshev 
