--- a/assets/pug/pages/template/email.pug
+++ b/assets/pug/pages/template/email.pug
@@ -78,7 +78,7 @@ html(lang='en')
                                  div.flex.items-center.gap-1(class="mt-1")
                                     span.text-content3.text-2xs alan.Dmitriy@Groshev
                               div.avatar
-                                 div.w-9.rounded-full
+                                 div.w-9.rounded-full.h-9
                                     img(src='../../assets/images/avatar/2.jpg' alt='avatar')
                         div.py-4.px-2.overflow-auto(class="custom-scroll max-h-639px]")
                            +email-data(EMAIL_DATA)
@@ -90,7 +90,7 @@ html(lang='en')
                            div.flex.items-center.gap-3(class="sm:gap-1")
                               i(data-feather='arrow-left' class="w-5 h-5 cursor-pointer stroke-title" class="btnEmail")
                               div.avatar 
-                                 div.w-9.rounded-full
+                                 div.w-9.rounded-full.h-9
                                     img(src='../../assets/images/avatar/2.jpg' alt='avatar')
                               div
                                  h4.text-xs.font-semibold.text-title(class="leading-none 3sm:text-2xs 3sm:leading-none") Ronald Hoffman 
